March 31, 2000 - Jim Whitehead
------------------------------
 - Bugfix to fix the "no process" mesasges, due to incorrect calls
   in tnt-buddy-shutdown
 - Removed executable permissions on CVS for PROTOCOL and README
 - Broke alot of fixed code in order to keep the project compatable
   with GNU emacs.  (replace-in-string) is not standard, and therefore
   breaks all over the place with GNU.  This affects: 
   - tnt-strip-a-href and tnt-strip-html in tnt.el and
   - toc-encode and toc-normalize
   These have been reverted to their orginal versions.
 - There was a problem with the changes to tnt-away, etc where (away) is not
   being appended to the buddy list for any away buddies.  This has been fixed.
   the problem was due to away being ignored in tnt-set-buddy-status

March 31, 2000 - John Jannotti
------------------------------
 - Simplified pounce deletion to just one function, picked
   tnt-pounce-delete as the "survivor". (Note this is user visable,
   but barely)
 - Simplified a lot of code by adding tnt-addassoc and using it.
 - renamed tnt-pounce-list to tnt-pounce-alist for consistency
 - Made tnt-away and tnt-away-alist use t/nil instead of 1/0.  This
   simplifies a lot of code that uses them.
 - Fixed toc-set-away so that tnt.el doesn't need to call tocstr-send
   directly anymore.
 - toc-{add,remove}-buddy - change names, simplify interface
 - funcall (switch-buffer-function), not apply
 - use tocstr-send-flap, not tocstr-send-flap1 in tnt-keepalive
 - Simplified, sped up and docstringed tnt-rotate-{left,right}
 - Used emacs primitives instead of complicated code to simplify
   toc-encode, toc-normalize, tnt-strip-html, tnt-strip-a-href, and
   tnt-completing-read-list
 - Added tnt-separator variable
 - Rename send-away-msg to tnt-send-away-msg
 - Used identity in call to mapcar for tnt-show-chat-participants and
   tnt-handle-chat-update-buddy
 - Since 'message' takes the same format string as 'format' does, removed